# scat

./: .clang-format  .gitignore  CMakeLists.txt  README.md  chunk2.md  cpp_html_test.html  openrepo.txt  openrepo3.txt  patch.txt  patch.yaml  scat.txt  tree.patch
.github/workflows/: ci.yml
.scatconfig/: onlymain.txt
.scatwrap/: CMakeLists.txt  README.md  scat.txt
.scatwrap/src/: apply_chunk_v2.cpp  chunk_help.cpp  chunk_help.h  clipboard.cpp  clipboard.h  collector.cpp  collector.h  git_info.cpp  git_info.h  glob.cpp  glob.h  main.cpp  options.cpp  options.h  parser.cpp  parser.h  rules.h  scat.cpp  scat.h  server.cpp  symbols.cpp  symbols.h  symbols_py.cpp  util.cpp  util.h  version.h
.scatwrap/tests/: apply.cpp  apply_stdin.cpp  apply_symbols.cpp  apply_yaml.cpp  collector_glob_exclude.cpp  glob.cpp  main.cpp  paths_glob.cpp  scat.cpp  symbols.cpp  symbols_py.cpp  wrap_cleanup.cpp
chunk/: CMakeLists.txt  chunk  chunk_tests
chunk/src/: apply_chunk_v2.cpp  apply_chunk_v2.h  main.cpp  symbols.cpp  symbols.h
chunk/tests/: apply.cpp  apply_symbols.cpp  apply_yaml.cpp
example/c/: 3.txt
src/: TEST.h  apply_chunk_v2.cpp  chunk_help.cpp  chunk_help.h  clipboard.cpp  clipboard.h  collector.cpp  collector.h  git_info.cpp  git_info.h  glob.cpp  glob.h  main.cpp  options.cpp  options.h  parser.cpp  parser.h  rules.cpp  rules.h  scat.cpp  scat.h  server.cpp  symbols.cpp  symbols.h  symbols_py.cpp  util.cpp  util.h  version.h
tests/: apply.cpp  apply_stdin.cpp  apply_symbols.cpp  apply_yaml.cpp  collector_glob.cpp  collector_glob_exclude.cpp  glob.cpp  main.cpp  paths_glob.cpp  scat.cpp  symbols.cpp  symbols_py.cpp  wrap_cleanup.cpp
wrapped/: README.md  scat.txt
wrapped/src/: TEST.h  collector.cpp  collector.h  glob.cpp  glob.h  options.cpp  options.h  scat.cpp  scat.h  server.cpp  symbols.cpp  symbols.h  util.cpp  util.h
wrapped/tests/: apply_yaml.cpp  scat.cpp
