<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <title>CMakeLists.txt</title>
</head>
<body>
<!-- BEGIN SCAT CODE -->
cmake_minimum_required(VERSION&nbsp;3.12)<br>
project(scat&nbsp;VERSION&nbsp;1.0&nbsp;LANGUAGES&nbsp;CXX)<br>
<br>
set(CMAKE_CXX_STANDARD&nbsp;17)<br>
set(CMAKE_CXX_STANDARD_REQUIRED&nbsp;ON)<br>
<br>
include(CheckCXXCompilerFlag)<br>
check_cxx_compiler_flag(&quot;-lstdc++fs&quot;&nbsp;HAS_LIBSTDCXXFS)<br>
<br>
enable_testing()<br>
add_subdirectory(chunk)<br>
<br>
#&nbsp;-----------------------------------------------------------------------------<br>
#&nbsp;Windows&nbsp;install&nbsp;prefix<br>
#&nbsp;-----------------------------------------------------------------------------<br>
if&nbsp;(WIN32&nbsp;AND&nbsp;CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)<br>
&nbsp;&nbsp;&nbsp;&nbsp;set(CMAKE_INSTALL_PREFIX&nbsp;&quot;$ENV{LOCALAPPDATA}/Programs/scat&quot;<br>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CACHE&nbsp;PATH&nbsp;&quot;Install&nbsp;path&quot;&nbsp;FORCE)<br>
endif()<br>
<br>
#&nbsp;-----------------------------------------------------------------------------<br>
#&nbsp;Gather&nbsp;sources&nbsp;with&nbsp;auto-update<br>
#&nbsp;-----------------------------------------------------------------------------<br>
file(GLOB&nbsp;SCAT_SOURCES<br>
&nbsp;&nbsp;&nbsp;&nbsp;CONFIGURE_DEPENDS<br>
&nbsp;&nbsp;&nbsp;&nbsp;${CMAKE_SOURCE_DIR}/src/*.cpp<br>
)<br>
<br>
#&nbsp;main.cpp&nbsp;не&nbsp;должен&nbsp;входить&nbsp;в&nbsp;логику&nbsp;тестов<br>
list(REMOVE_ITEM&nbsp;SCAT_SOURCES&nbsp;&quot;${CMAKE_SOURCE_DIR}/src/main.cpp&quot;)<br>
<br>
file(GLOB&nbsp;SCAT_HEADERS<br>
&nbsp;&nbsp;&nbsp;&nbsp;CONFIGURE_DEPENDS<br>
&nbsp;&nbsp;&nbsp;&nbsp;${CMAKE_SOURCE_DIR}/src/*.h<br>
)<br>
<br>
#&nbsp;-----------------------------------------------------------------------------<br>
#&nbsp;Executable<br>
#&nbsp;-----------------------------------------------------------------------------<br>
add_executable(scat<br>
&nbsp;&nbsp;&nbsp;&nbsp;src/main.cpp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#&nbsp;тонкая&nbsp;обёртка<br>
&nbsp;&nbsp;&nbsp;&nbsp;${SCAT_SOURCES}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#&nbsp;scat.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;${SCAT_HEADERS}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#&nbsp;scat.h<br>
)<br>
<br>
target_link_libraries(scat&nbsp;chunklib)<br>
<br>
#&nbsp;std::filesystem&nbsp;fix&nbsp;for&nbsp;MinGW<br>
if&nbsp;(HAS_LIBSTDCXXFS)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_link_libraries(scat&nbsp;stdc++fs)<br>
endif()<br>
<br>
#&nbsp;-----------------------------------------------------------------------------<br>
#&nbsp;Install&nbsp;executable<br>
#&nbsp;-----------------------------------------------------------------------------<br>
install(TARGETS&nbsp;scat<br>
&nbsp;&nbsp;&nbsp;&nbsp;RUNTIME&nbsp;DESTINATION&nbsp;bin<br>
)<br>
<br>
#&nbsp;-----------------------------------------------------------------------------<br>
#&nbsp;Windows&nbsp;shim&nbsp;(scat.cmd&nbsp;in&nbsp;WindowsApps)<br>
#&nbsp;-----------------------------------------------------------------------------<br>
if&nbsp;(WIN32)<br>
&nbsp;&nbsp;&nbsp;&nbsp;install(CODE&nbsp;&quot;<br>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;set(wapps&nbsp;\&quot;\$ENV{LOCALAPPDATA}/Microsoft/WindowsApps\&quot;)<br>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;file(MAKE_DIRECTORY&nbsp;\&quot;\${wapps}\&quot;)<br>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;set(scat_path&nbsp;\&quot;\$ENV{LOCALAPPDATA}/Programs/scat/bin/scat.exe\&quot;)<br>
if(NOT&nbsp;EXISTS&nbsp;\&quot;\${wapps}/scat.cmd\&quot;)<br>
&nbsp;&nbsp;&nbsp;&nbsp;file(WRITE&nbsp;\&quot;\${wapps}/scat.cmd\&quot;&nbsp;\&quot;@echo&nbsp;off\n\\\&quot;\${scat_path}\\\&quot;&nbsp;%*\&quot;)<br>
endif()<br>
&nbsp;&nbsp;&nbsp;&nbsp;&quot;)<br>
endif()<br>
<br>
#&nbsp;-----------------------------------------------------------------------------<br>
#&nbsp;Tests<br>
#&nbsp;-----------------------------------------------------------------------------<br>
file(GLOB&nbsp;SCAT_TESTS&nbsp;CONFIGURE_DEPENDS&nbsp;tests/*)<br>
<br>
add_executable(scat_tests<br>
&nbsp;&nbsp;&nbsp;&nbsp;${SCAT_TESTS}<br>
&nbsp;&nbsp;&nbsp;&nbsp;${SCAT_SOURCES}&nbsp;&nbsp;&nbsp;<br>
&nbsp;&nbsp;&nbsp;&nbsp;${SCAT_HEADERS}&nbsp;&nbsp;&nbsp;<br>
)<br>
<br>
target_include_directories(scat_tests&nbsp;PRIVATE&nbsp;src&nbsp;tests)<br>
target_link_libraries(scat_tests&nbsp;chunklib)<br>
<br>
if&nbsp;(WIN32)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_link_libraries(scat_tests&nbsp;ws2_32)<br>
endif()<br>
<br>
add_test(NAME&nbsp;scat_tests&nbsp;COMMAND&nbsp;scat_tests)<br>
<!-- END SCAT CODE -->
</body>
</html>
